--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,5 +17,9 @@
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
+  <ion-item>
+    <ion-label>Address URL</ion-label>
+    <ion-input [(ngModel)]="url"></ion-input>
+  </ion-item>
   <ion-button color="primary" (click)="launch()">Launch</ion-button>
 </ion-content>
