update iab options

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
   </div>
   <ion-item>
     <ion-label>Address URL</ion-label>
-    <ion-input [(ngModel)]="url"></ion-input>
+    <ion-input type="url" [(ngModel)]="url"></ion-input>
   </ion-item>
   <ion-button color="primary" (click)="launch()">Launch</ion-button>
 </ion-content>
